# tui-menu

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  demo.tape
.github/workflows/: rust-check.yml  rust-release-plz.yml  rust-test.yml
examples/: basic.rs  nested_group.rs
src/: lib.rs
