[package]
name = "tui-menu"
version = "0.2.1"
edition = "2021"
description = "A menu widget for Ratatui"
license = "MIT OR Apache-2.0"
keywords = ["tui"]
repository = "https://github.com/shuoli84/tui-menu"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ratatui = "0.26.1"

[dev-dependencies]
color-eyre = "0.6.3"
crossterm = "0.27.0"
