[package]
name = "tui-menu"
version = "0.3.0"
edition = "2021"
description = "A menu widget for Ratatui"
license = "MIT OR Apache-2.0"
keywords = ["tui"]
repository = "https://github.com/shuoli84/tui-menu"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ratatui-core = "0.1.0"
ratatui-widgets = "0.3.0"

[dev-dependencies]
color-eyre = "0.6.3"
ratatui = "0.30.0"
